[package]
name = "rust_graphical_oscillator"
version = "0.1.1"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2021"

[lib]
name = "oscillator_lib"
path = "src/lib.rs"

[[bin]]
name = "oscillator_gui"
path = "src/oscillator_gui/bin/main.rs"

[[bin]]
name = "tone_map_example"
path = "src/oscillator_gui/bin/tone_map_example.rs"

[[bin]]
name = "tone_handling_example"
path = "src/oscillator_gui/bin/tone_handling_example.rs"

[dependencies]
bus = { version = "2.4.1" }
eframe = { version = "0.26.2" }
egui_plot = { version = "0.26.2" }
scan_fmt = "0.2.6"
jack = "0.10.0"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = { version = "1.0.108"}
wmidi = "4.0.0"
crossbeam-channel = "0.5.6"
clap = { version = "4.4.16", features = ["derive"]}
